# teletrade-bot

./: .env.sample  .gitignore  README.md  bot.py  bots.py  pyproject.toml  requirements.txt  tbot.py
src/teletrade_bot/: bots.py  config.py  tbot.py
